--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,7 +16,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
 # In Windows, build-name is used as the major, minor, and patch parts
 # of the product and file versions while build-number is used as the build suffix.
-version: 1.0.0+4
+version: 1.0.1+6
 
 environment:
   sdk: '>=2.19.2 <3.0.0'
@@ -40,6 +40,7 @@ dependencies:
   animated_text_kit: ^4.2.2
   intl: ^0.18.0
   uuid: ^3.0.7
+  url_launcher: ^6.1.10
 
 dev_dependencies:
   flutter_test:
