--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,7 +16,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
 # In Windows, build-name is used as the major, minor, and patch parts
 # of the product and file versions while build-number is used as the build suffix.
-version: 1.0.1+9
+version: 1.0.2+13
 
 environment:
   sdk: '>=2.19.2 <3.0.0'
@@ -41,6 +41,8 @@ dependencies:
   intl: ^0.18.0
   uuid: ^3.0.7
   url_launcher: ^6.1.10
+  flutter_spinkit: ^5.1.0
+  flutter_markdown: ^0.6.14
 
 dev_dependencies:
   flutter_test:
